<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDEFE5">

<!--hal-->


    <ScrollView

        android:layout_width="match_parent"

        android:layout_height="match_parent"

        android:fillViewport="true">


        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:orientation="vertical"

            android:gravity="center_horizontal"

            android:paddingStart="20dp"

            android:paddingEnd="20dp"

            android:paddingTop="20dp"

            android:paddingBottom="90dp">




            <!-- LOGO -->

            <ImageView

                android:id="@+id/imgLogo"

                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"

                android:src="@drawable/warevista_logo"

                android:scaleType="fitCenter"

                android:contentDescription="WareVista Logo"/>




            <!-- LOGIN CARD -->


            <androidx.cardview.widget.CardView


                android:layout_width="340dp"

                android:layout_height="wrap_content"

                android:layout_gravity="center"

                android:layout_marginTop="-10dp"


                app:cardCornerRadius="28dp"

                app:cardElevation="8dp"

                app:cardBackgroundColor="#FFFFFF">



                <LinearLayout


                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"


                    android:orientation="vertical"

                    android:padding="20dp">





                    <!-- TOP SECTION -->


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <!-- LOGIN LOTTIE -->
                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/lottieLogin"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            app:lottie_autoPlay="true"
                            app:lottie_loop="true"
                            app:lottie_rawRes="@raw/login_warehouse"/>

                        <!-- TITLE + LANGUAGE -->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginStart="14dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/login"
                                android:textColor="#145A32"
                                android:textSize="32sp"
                                android:textStyle="bold"/>

                            <com.google.android.material.card.MaterialCardView
                                android:id="@+id/languageCard"
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:layout_marginTop="5dp"
                                app:cardCornerRadius="15dp"
                                app:cardElevation="1dp"
                                app:cardBackgroundColor="#2E7D32"
                                app:strokeWidth="1dp"
                                app:strokeColor="#81C784">

                                <Spinner
                                    android:id="@+id/spinnerLanguage"
                                    android:layout_width="100dp"
                                    android:layout_height="30dp"
                                    android:paddingStart="7dp"
                                    android:paddingEnd="2dp"
                                    android:entries="@array/language_options"/>

                            </com.google.android.material.card.MaterialCardView>

                        </LinearLayout>

                    </LinearLayout>

                    <!-- WAREHOUSE ID -->


                    <!--                <TextView-->


                    <!--                    android:layout_width="match_parent"-->


                    <!--                    android:layout_height="wrap_content"-->


                    <!--                    android:layout_marginTop="30dp"-->


                    <!--                    android:text="Warehouse ID"-->

                    <!--                    android:textColor="#163A27"-->


                    <!--                    android:textStyle="bold"-->

                    <!--                    android:textSize="15sp"/>-->




                    <com.google.android.material.textfield.TextInputLayout


                        android:layout_width="match_parent"


                        android:layout_height="wrap_content"


                        android:layout_marginTop="8dp"


                        android:hint="@string/enter_user_id"


                        app:boxBackgroundMode="outline"


                        app:boxCornerRadiusTopStart="18dp"


                        app:boxCornerRadiusTopEnd="18dp"


                        app:boxCornerRadiusBottomStart="18dp"


                        app:boxCornerRadiusBottomEnd="18dp">


                        <com.google.android.material.textfield.TextInputEditText


                            android:id="@+id/etUserId"


                            android:layout_width="match_parent"


                            android:layout_height="55dp"


                            android:inputType="text"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- PASSWORD -->


                    <!--                <TextView-->


                    <!--                    android:layout_width="match_parent"-->


                    <!--                    android:layout_height="wrap_content"-->


                    <!--                    android:layout_marginTop="20dp"-->


                    <!--                    android:text="Password"-->


                    <!--                    android:textColor="#163A27"-->


                    <!--                    android:textStyle="bold"-->


                    <!--                    android:textSize="15sp"/>-->


                    <com.google.android.material.textfield.TextInputLayout


                        android:layout_width="match_parent"


                        android:layout_height="wrap_content"


                        android:layout_marginTop="8dp"


                        android:hint="@string/enter_password"


                        app:boxBackgroundMode="outline"


                        app:boxCornerRadiusTopStart="18dp"


                        app:boxCornerRadiusTopEnd="18dp"


                        app:boxCornerRadiusBottomStart="18dp"


                        app:boxCornerRadiusBottomEnd="18dp"


                        app:endIconMode="password_toggle">



                        <com.google.android.material.textfield.TextInputEditText


                            android:id="@+id/etPassword"


                            android:layout_width="match_parent"


                            android:layout_height="55dp"


                            android:inputType="textPassword"/>



                    </com.google.android.material.textfield.TextInputLayout>






                    <!-- BUTTON -->


                    <com.google.android.material.button.MaterialButton


                        android:id="@+id/btnLogin"


                        android:layout_width="match_parent"


                        android:layout_height="58dp"


                        android:layout_marginTop="30dp"


                        android:text="@string/sign_in"


                        android:textSize="17sp"


                        android:textStyle="bold"


                        android:textColor="#FFFFFF"


                        android:textAllCaps="false"


                        android:backgroundTint="#145A32"


                        app:cornerRadius="18dp"/>





                </LinearLayout>


            </androidx.cardview.widget.CardView>






            <!-- FOOTER -->


            <TextView


                android:layout_width="wrap_content"


                android:layout_height="wrap_content"


                android:layout_marginTop="45dp"


                android:text="@string/warevista_footer"


                android:textColor="#557064"


                android:textStyle="bold"


                android:textSize="13sp"/>


        </LinearLayout>


    </ScrollView>



    <!-- FIXED BOTTOM ROAD -->

    <FrameLayout

        android:layout_width="match_parent"

        android:layout_height="70dp"

        android:layout_gravity="bottom">


        <!-- ROAD -->

        <View

            android:layout_width="match_parent"

            android:layout_height="3dp"

            android:layout_gravity="bottom"

            android:background="#557064"/>



        <!-- TRUCK -->

        <com.airbnb.lottie.LottieAnimationView

            android:id="@+id/lottieTruck"

            android:layout_width="120dp"

            android:layout_height="80dp"

            android:layout_gravity="bottom"

            app:lottie_autoPlay="true"

            app:lottie_loop="false"

            app:lottie_rawRes="@raw/warehouse_truck"/>




    </FrameLayout>


</FrameLayout>